--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
-  <ion-tab label="Home" icon="home" href="/tabs/(home:home)">
-    <ion-router-outlet name="home"></ion-router-outlet>
+  <ion-tab label="Dashboard" icon="home" href="/tabs/(dashboard:dashboard)">
+    <ion-router-outlet name="dashboard"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="About" icon="information-circle" href="/tabs/(about:about)">
-    <ion-router-outlet name="about"></ion-router-outlet>
+  <ion-tab label="Report" icon="information-circle" href="/tabs/(report:report)">
+    <ion-router-outlet name="report"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Contact" icon="contacts" href="/tabs/(contact:contact)">
-    <ion-router-outlet name="contact"></ion-router-outlet>
+  <ion-tab label="Settings" icon="Settings" href="/tabs/(settings:settings)">
+    <ion-router-outlet name="settings"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
