--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,33 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="login-content" padding>
+	<ion-row class="logo-row">
+		<ion-col>
+			<img src="./../../assets/logo.png" />
+		</ion-col>
+	</ion-row>
+	<ion-row class="login-box">
+		<ion-col>
+			<form (ngSubmit)="login()" #registerForm="ngForm">
+				<ion-row>
+					<ion-col>
+						<ion-list inset>
+							<ion-item>
+								<ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
+							</ion-item>
+							<ion-item>
+								<ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password"
+								    required></ion-input>
+							</ion-item>
+						</ion-list>
+					</ion-col>
+				</ion-row>
 
-<ion-content padding>
-
+				<ion-row>
+					<ion-col class="btn-group d-flex">
+						<button ion-button class="btn btn-success w-100" type="submit" [disabled]="!registerForm.form.valid">Login</button>
+						<button ion-button class="btn btn-secondary w-100" clear (click)="createAccount()">Register</button>
+					</ion-col>
+				</ion-row>
+			</form>
+		</ion-col>
+	</ion-row>
 </ion-content>
