--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -14,16 +14,20 @@
                   <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="registerCredentials.username" required></ion-input>
               </ion-item>
               <ion-item>
-                  <ion-input type="text" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required></ion-input>
+                  <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="registerCredentials.password" required></ion-input>
               </ion-item>
               <ion-item>
-                  <ion-input type="text" placeholder="Confirmed Password" name="confirmPassword" [(ngModel)]="registerCredentials.confirmPassword" required></ion-input>
+                  <ion-input type="password" placeholder="Confirmed Password" name="confirmPassword" [(ngModel)]="registerCredentials.confirmPassword" required></ion-input>
               </ion-item>
               <ion-item>
                   <ion-input type="email" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
               </ion-item>
-              <ion-item>
-                  <ion-input type="text" placeholder="Gender" name="gender" [(ngModel)]="registerCredentials.gender" required></ion-input>
+              <ion-item class="item-leave-height">
+                  <ion-label>Gender</ion-label>
+                  <ion-select placeholder="Gender" [(ngModel)]="registerCredentials.gender" name="gender" >
+                    <ion-select-option value="male">Male</ion-select-option>
+                    <ion-select-option value="female">Female</ion-select-option>
+                  </ion-select>
               </ion-item>
             </ion-list>
           </ion-col>
