--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -4,6 +4,34 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content class="dashboard-content" padding>
+  <ion-card class="target-calories">  
+      <ion-card-header class="calories-display">
+          <p style="font-weight: bold; font-size: 18px; color: white;" text-center>1200 Calories Left</p>
+        </ion-card-header>
+    <ion-card-content class="calories-content"> 
+      <ion-row>
+        <ion-col>
+            <p style="font-weight: bold; font-size: 18px; color: rgb(85, 207, 191);" text-center>0</p>
+        </ion-col>
+        <ion-col>
+            <p style="font-weight: bold; font-size: 18px; color: rgb(211, 55, 55);" text-center>0</p>
+        </ion-col>
+        <ion-col>
+            <p style="font-weight: bold; font-size: 18px; color: rgb(0, 0, 0);" text-center>0</p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+            <p style="font-size: 15px; color: rgb(0, 0, 0);" text-center>Consumed</p>
+        </ion-col>
+        <ion-col>
+            <p style="font-size: 15px; color: rgb(0, 0, 0);" text-center>Burned</p>
+          </ion-col>
+          <ion-col>
+              <p style="font-size: 15px; color: rgb(0, 0, 0);" text-center>Net</p>
+            </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
