--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -9,7 +9,7 @@
     margin: 10px;
 }
 .calendar-header {
-    background-color: #e74545;
+    background-color: #2288ee;
     color: #FFFFFF;
     width: 345px;
   }
