--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -70,21 +70,21 @@
         <ion-label class="meal-label" style="font-size: 20px; color: rgb(24, 24, 24);">
           Breakfast
         </ion-label>
-        <ion-icon name="arrow-forward" (click)="breakfastSelection()"></ion-icon>
+        <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
       <ion-item (click)="addMeal('lunch')">
         <ion-img src="./../../assets/lunch.png" style="width: 30px; height: 30px;"></ion-img>
         <ion-label class="meal-label" style="font-size: 20px; color: rgb(24, 24, 24);">
           Lunch
         </ion-label>
-        <ion-icon name="arrow-forward" (click)="lunchSelection()"></ion-icon>
+        <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
       <ion-item (click)="addMeal('dinner')">
         <ion-img src="./../../assets/dinner.png" style="width: 30px; height: 30px;"></ion-img>
         <ion-label class="meal-label" style="font-size: 20px; color: rgb(24, 24, 24);">
           Dinner
         </ion-label>
-        <ion-icon name="arrow-forward" (click)="dinnerSelection()"></ion-icon>
+        <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
     </ion-col>
   </ion-row>
