Added report ui structure. Pending for data population

--- a/src/app/report/report.page.html
+++ b/src/app/report/report.page.html
@@ -5,5 +5,35 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <canvas #lineCanvas></canvas>
+      </ion-col>
+    </ion-row>
+    <ion-row class="square-container text-center">
+      <ion-col class="square">
+        <div class="square-content">
+          <div class="text-center w-100">BMI</div>
+        </div>
+      </ion-col>
+      <ion-col class="square">
+        <div class="square-content">
+          <div class="text-center w-100">BMR</div>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row class="square-container text-center">
+      <ion-col class="square">
+        <div class="square-content">
+          <div class="text-center w-100">Some Stats</div>
+        </div>
+      </ion-col>
+      <ion-col class="square">
+        <div class="square-content">
+          <div class="text-center w-100">Other Stats</div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
