--- a/src/app/report/report.page.scss
+++ b/src/app/report/report.page.scss
@@ -26,6 +26,8 @@ $gutterSize: 16px;
         background-color: #ffffff;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
         display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 }
