--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
   <ion-tab label="Report" icon="information-circle" href="/tab/tabs/(report:report)">
     <ion-router-outlet name="report"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Settings" icon="Settings" href="/tab/tabs/(settings:settings)">
+  <!-- <ion-tab label="Settings" icon="Settings" href="/tab/tabs/(settings:settings)">
     <ion-router-outlet name="settings"></ion-router-outlet>
-  </ion-tab>
+  </ion-tab> -->
 </ion-tabs>
