--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -23,3 +23,11 @@
 .meal-selection {
     margin: 10px;
 }
+.add-remove-icons{
+    background-color: white;
+    padding-top: 10px;
+}
+
+.collapsible-list{
+    padding-left: 30px;
+}
