--- a/src/app/foodrecord/foodrecord.page.html
+++ b/src/app/foodrecord/foodrecord.page.html
@@ -21,29 +21,23 @@
   </ion-searchbar>
 
   <table class="table">
-    <thead align="center">
+    <thead class="text-align: center">
       <tr>
-        <th style="width:10%">Select</th>
-        <th style="width:20%">Item</th>
-        <th style="width:50%">Qty</th>
-        <th style="width:20%">Kcal</th>
+        <th style="width:50%">Item</th>
+        <th style="width:35%">Qty</th>
+        <th style="width:25%">Kcal</th>
       </tr>
     </thead>
 
-    <tbody align="center">
+    <tbody class="text-align: center">
       <tr *ngFor="let foodRecordItem of foodRecordItems; let i=index">
-        <td>
-          <ion-checkbox class="itemSelectControl" color="primary" [(ngModel)]="foodRecordItems[i].itemSelected" #itemSelected1="ngModel"
-            [checked]=true>
-          </ion-checkbox>
-        </td>
-        <td class="itemNameControl">{{foodRecordItem.itemName}}</td>
-        <td>
+        <td class="itemNameControl text-left pl-0 pr-0">{{foodRecordItem.itemName}}</td>
+        <td class="pl-0 pr-0">
           <ion-row class="itemQty">
             <ion-col class="itemControl" (click)="reduceQty(i)">
               <ion-icon name="ios-remove-circle-outline"></ion-icon>
             </ion-col>
-            <ion-col class="selectQtyCol">
+            <ion-col class="selectQtyCol p-0">
               <ion-input type="number" [(ngModel)]="foodRecordItems[i].itemQty" #itemQty1="ngModel" min="0" value="0" oninput="this.value = Math.floor(Math.abs(this.value))"></ion-input>
             </ion-col>
             <ion-col class="itemControl" (click)="addQty(i)">
